Security: Remove sensitive information and improve configuration

--- a/.gitignore
+++ b/.gitignore
@@ -25,20 +25,41 @@ venv/
 ENV/
 env/
 
+# Environment Variables
+.env
+.env.*
+!.env.example
+
 # IDE
 .idea/
 .vscode/
 *.swp
 *.swo
 
-# OS
+# Logs
+*.log
+logs/
+
+# Local Development
 .DS_Store
-.DS_Store?
-._*
-.Spotlight-V100
-.Trashes
-ehthumbs.db
 Thumbs.db
+
+# Model Files
+models/
+*.bin
+*.pt
+*.pth
+*.onnx
+
+# Test Coverage
+.coverage
+htmlcov/
+
+# Temporary Files
+tmp/
+temp/
+uploads/
+results/
 
 # Project specific
 offload/
@@ -53,6 +74,5 @@ offload/
 .env
 
 # LLM Models
-models/
 *.gguf
 *.ggml 
