--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,13 @@
-streamlit>=1.24.0
-torch>=2.0.0
-transformers>=4.30.0
-psutil>=5.9.0
-pyyaml>=6.0
-numpy>=1.24.0
+streamlit>=1.32.0
 requests>=2.31.0
-plotly>=5.13.0
-pandas>=2.0.0
+python-dotenv>=1.0.0
+torch>=2.2.0
+pyyaml>=6.0.1
+psutil>=5.9.0
+plotly>=5.18.0
+pandas>=2.2.0
+numpy>=1.24.0
+watchdog>=3.0.0
+transformers>=4.30.0
 accelerate>=0.20.0
 bitsandbytes>=0.41.0  # For 8-bit quantization 
