--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,17 @@
 streamlit>=1.24.0
+javalang>=0.13.0
+networkx>=3.1
+plotly>=5.15.0
+pandas>=2.0.0
+numpy>=1.24.0
+scikit-learn>=1.3.0
 torch>=2.0.0
 transformers>=4.30.0
+python-dotenv>=1.0.0
+requests>=2.31.0
+beautifulsoup4>=4.12.0
+lxml>=4.9.0
 psutil>=5.9.0
 pyyaml>=6.0
-numpy>=1.24.0
-requests>=2.31.0
-plotly>=5.13.0
-pandas>=2.0.0
 accelerate>=0.20.0
 bitsandbytes>=0.41.0  # For 8-bit quantization 
